...
                        } else if (direction == DismissDirection.endToStart) {
                          // Delete memo
                          return await showDialog(
                            context: context,
                            builder: (BuildContext context) {
                              return AlertDialog(
                                title: const Text('Confirm Delete'),
                                content: const Text(
                                  'Are you sure you want to delete this memo?',
                                ),
                                actions: <Widget>[
                                  TextButton(
                                    onPressed:
...
                                ref.read(archiveMemoProvider(memo.id))().then((
                                  _,
                                ) {
                                  ScaffoldMessenger.of(context).showSnackBar(
                                    const SnackBar(
                                      content: Text(
                                        'Memo archived successfully',
                                      ),
                                      backgroundColor: Colors.green,
                                    ),
                                  );
                                });
                              },
...
